[common] fix(a11y): outline is visible on tab navigation, not on click

--- a/packages/common/src/Styles/global.scss
+++ b/packages/common/src/Styles/global.scss
@@ -14,6 +14,13 @@
   outline: 1px dashed;
 }
 
+.noOutline {
+  *:focus {
+    outline: none;
+    box-shadow: none;
+  }
+}
+
 .visuallyHidden {
   width: 0.1px;
 	height: 0.1px;
